fix(button): fix button animation&general spacing

--- a/src/blocks/button/_type/button_type_main.css
+++ b/src/blocks/button/_type/button_type_main.css
@@ -9,6 +9,7 @@
   display: block;
   position: relative;
   overflow: hidden;
+  z-index: 1;
 }
 
 /* .team .button_type_main {
