--- a/src/blocks/footer/__contact-item/footer__contact-item.css
+++ b/src/blocks/footer/__contact-item/footer__contact-item.css
@@ -2,7 +2,7 @@
   margin-bottom: 14px;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  /* gap: 10px; */
 }
 
 .footer__contact-item:last-child {
