--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -2,5 +2,6 @@
   color: rgba(255, 255, 255, 0.7);
   font-size: 1.6rem;
   text-decoration: none;
-  /* margin: auto; */
+  width: fit-content;
+  margin: 0 auto;
 }
