--- a/src/blocks/media/__videos/media__videos.css
+++ b/src/blocks/media/__videos/media__videos.css
@@ -1,7 +1,7 @@
 .media__videos {
   display: flex;
   gap: 26px;
-  /* margin: 0 15%; */
+  margin-top: 5%;
   max-width: 80%;
 }
 
